--- a/steps/compliance/check-mrn/template.html
+++ b/steps/compliance/check-mrn/template.html
@@ -4,16 +4,16 @@
 {% set title = content.title | safe %}
 
 {% block fields %}
-    <p class="govuk-body">{{ content.subtitle | safe }}</p>
+    <p class="govuk-body">{{ content.subtitle }}</p>
 
     {% if benefitType === 'UC' %}
-        <img class="mrn-image" src="{{ asset_path }}images/mrn-date-uc.png"  alt="{{ content.imageAlt | safe }}">
+        <img class="mrn-image" src="{{ asset_path }}images/mrn-date-uc.png"  alt="{{ content.imageAlt }}">
     {% else %}
-        <img class="mrn-image" src="{{ asset_path }}images/mrn-date.png"  alt="{{ content.imageAlt | safe }}">
+        <img class="mrn-image" src="{{ asset_path }}images/mrn-date.png"  alt="{{ content.imageAlt }}">
     {% endif %}
 
     {% call formSection() %}
-        <legend id="check-mrn" class="govuk-body govuk-!-font-weight-bold">{{ content.question | safe }}</legend>
+        <legend id="check-mrn" class="govuk-body govuk-!-font-weight-bold">{{ content.question }}</legend>
 
         {{ selectionButtons(
             fields.checkedMRN,
