--- a/steps/hearing/options/template.html
+++ b/steps/hearing/options/template.html
@@ -4,8 +4,8 @@
 {% set title = content.title | safe %}
 
 {% block fields %}
-<p class="govuk-body">{{ content.subtitle | safe }}</p>
-<p class="govuk-body">{{ content.instructions | safe }}</p>
+<p class="govuk-body">{{ content.subtitle }}</p>
+<p class="govuk-body">{{ content.instructions }}</p>
 
 
 
