--- a/steps/representative/no-representative-details/template.html
+++ b/steps/representative/no-representative-details/template.html
@@ -4,14 +4,14 @@
 {% set title = content.title | safe %}
 
 {% block fields %}
-    <p class="govuk-body">{{ content.subtitle | safe }}</p>
+    <p class="govuk-body">{{ content.subtitle }}</p>
 
     {% call formSection() %}
-        <p class="govuk-body">{{ content.register.heading | safe }}</p>
+        <p class="govuk-body">{{ content.register.heading }}</p>
         <ul class="govuk-list govuk-list--bullet">
-            <li>{{ content.register.fullName | safe }}</li>
-            <li>{{ content.register.organisation | safe }}</li>
-            <li>{{ content.register.emailOrPostalAddress | safe }}</li>
+            <li>{{ content.register.fullName }}</li>
+            <li>{{ content.register.organisation }}</li>
+            <li>{{ content.register.emailOrPostalAddress }}</li>
         </ul>
     {% endcall %}
 {% endblock %}
