--- a/steps/representative/representative-international-details/answer.html
+++ b/steps/representative/representative-international-details/answer.html
@@ -13,8 +13,8 @@
         <dt class="govuk-summary-list__key">{{ content.cya.organisation.question }}</dt>
         <dd class="govuk-summary-list__value">{{ CYAOrganisation }}</dd>
         <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="{{ path }}">{{ content.cya.change | safe }}</a>
-            <span class="govuk-visually-hidden"> {{ content.cya.repDetails | safe }}</span>
+            <a class="govuk-link" href="{{ path }}">{{ content.cya.change }}</a>
+            <span class="govuk-visually-hidden"> {{ content.cya.repDetails }}</span>
         </dd>
     </dl>
 </div>
@@ -27,8 +27,8 @@
             {{ fields.townCity.value }}<br>
         </dd>
         <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="{{ path }}">{{ content.cya.change | safe }}</a>
-            <span class="govuk-visually-hidden"> {{ content.cya.repDetails | safe }}</span>
+            <a class="govuk-link" href="{{ path }}">{{ content.cya.change }}</a>
+            <span class="govuk-visually-hidden"> {{ content.cya.repDetails }}</span>
         </dd>
     </dl>
 </div>
