--- a/steps/start/create-account/template.html
+++ b/steps/start/create-account/template.html
@@ -5,9 +5,9 @@
 
 {% block fields %}
     {% if isIba %}
-        <p class="govuk-body">{{ content.subtitleIba | safe }}</p>
+        <p class="govuk-body">{{ content.subtitleIba }}</p>
     {% else %}
-        <p class="govuk-body">{{ content.subtitle | safe }}</p>
+        <p class="govuk-body">{{ content.subtitle }}</p>
     {% endif %}
 
     {% call formSection() %}
@@ -22,5 +22,5 @@
         }}
     {% endcall %}
 
-    <p class="govuk-body">{{ content.fields.createAccount.warning | safe }} {{ content.fields.createAccount.yes | safe }}.</p>
+    <p class="govuk-body">{{ content.fields.createAccount.warning }} {{ content.fields.createAccount.yes }}.</p>
 {% endblock %}
