--- a/steps/start/language-preference/template.html
+++ b/steps/start/language-preference/template.html
@@ -7,7 +7,7 @@
 
 {% block fields %}
     <div id="languagePreference">
-        <p class="govuk-body">{{ content.summary | safe }}</p>
+        <p class="govuk-body">{{ content.summary }}</p>
 
         {% call formSection() %}
             {{ selectionButtons(
@@ -20,7 +20,7 @@
                 ])
             }}
             <div class="panel js-hidden" id="noWelsh">
-                <p class="govuk-body">{{ content.answerNo | safe }}</p>
+                <p class="govuk-body">{{ content.answerNo }}</p>
             </div>
         {% endcall %}
     </div>
