--- a/steps/compliance/cant-appeal/template.html
+++ b/steps/compliance/cant-appeal/template.html
@@ -11,14 +11,14 @@
 {% endblock %}
 
 {% block pageTitle %}
-{{ content.titleHead | safe }} - {{ commonContent[htmlLang].ibca.windowTitleSuffix if isIba else commonContent[htmlLang].windowTitleSuffix | safe }}
+{{ content.titleHead }} - {{ commonContent[htmlLang].ibca.windowTitleSuffix if isIba else commonContent[htmlLang].windowTitleSuffix }}
 {% endblock %}
 
 {% block breadcrumbs %}
     {% call phaseBanner(commonContent[htmlLang], feedbackLink + urlPath) %}
-        {{ banner | safe }}
+        {{ banner }}
     {% endcall %}
-    <a class="govuk-back-link" href="#">{{ commonContent[htmlLang].back | safe }}</a>
+    <a class="govuk-back-link" href="#">{{ commonContent[htmlLang].back }}</a>
 {% endblock %}
 
 {% block two_thirds %}
@@ -26,10 +26,10 @@
 
     {{ header(content.title, size='l') }}
 
-    <p class="govuk-body">{{ content.appealLateReason | safe }}</p>
-    <p class="govuk-body">{{ content.findContactDetails | safe }}</p>
+    <p class="govuk-body">{{ content.appealLateReason }}</p>
+    <p class="govuk-body">{{ content.findContactDetails }}</p>
 
-    <a class="govuk-link" href="http://www.gov.uk">{{ content.govuk | safe }}</a>
+    <a class="govuk-link" href="http://www.gov.uk">{{ content.govuk }}</a>
 {% endblock %}
 
 {% block full_width %}
