--- a/steps/compliance/contact-dwp/template.html
+++ b/steps/compliance/contact-dwp/template.html
@@ -4,27 +4,27 @@
 {% from "components/phase_banner.njk" import phaseBanner %}
 
 {% block pageTitle %}
-{{ content.titleHead | safe }} - {{ commonContent[htmlLang].ibca.windowTitleSuffix if isIba else commonContent[htmlLang].windowTitleSuffix | safe }}
+{{ content.titleHead }} - {{ commonContent[htmlLang].ibca.windowTitleSuffix if isIba else commonContent[htmlLang].windowTitleSuffix }}
 {% endblock %}
 
 {% block breadcrumbs %}
     {% call phaseBanner(commonContent[htmlLang], feedbackLink + urlPath) %}
-        {{ banner | safe }}
+        {{ banner }}
     {% endcall %}
-    <a class="govuk-back-link" href="#">{{ commonContent[htmlLang].back | safe }}</a>
+    <a class="govuk-back-link" href="#">{{ commonContent[htmlLang].back }}</a>
 {% endblock %}
 
 {% block two_thirds %}
     {{ header(content.title, size="l") }}
 
-    <p class="govuk-body">{{ content.requestingMandatoryReconsideration | safe }}</p>
+    <p class="govuk-body">{{ content.requestingMandatoryReconsideration }}</p>
     {% if benefitType == 'UC' %}
-        <p class="govuk-body">{{ content.linkUCJournal | safe }}</p>
+        <p class="govuk-body">{{ content.linkUCJournal }}</p>
     {% else %}
-        <p class="govuk-body">{{ content.contactDetailsFromLettersOrEmails | safe }}</p>
+        <p class="govuk-body">{{ content.contactDetailsFromLettersOrEmails }}</p>
     {% endif %}
 
     <div class="govuk-!-margin-bottom-6">
-        <a class="govuk-link" href="http://www.gov.uk">{{ content.govuk | safe }}</a>
+        <a class="govuk-link" href="http://www.gov.uk">{{ content.govuk }}</a>
     </div>
 {% endblock %}
