--- a/steps/compliance/dwp-issuing-office-other/template.html
+++ b/steps/compliance/dwp-issuing-office-other/template.html
@@ -4,7 +4,7 @@
 {% set title = content.title | safe %}
 
 {% block fields %}
-<img class="mrn-image issuing-office" src="{{ asset_path }}images/dwp-office-location.png" alt="{{ content.imageAlt | safe }}">
-<p class="govuk-body"><h2 class="govuk-heading-s">{{ content.fields.dwpIssuingOffice.header | safe }}</h2></p>
+<img class="mrn-image issuing-office" src="{{ asset_path }}images/dwp-office-location.png" alt="{{ content.imageAlt }}">
+<p class="govuk-body"><h2 class="govuk-heading-s">{{ content.fields.dwpIssuingOffice.header }}</h2></p>
 {{ select(fields.dwpIssuingOffice, content.fields.dwpIssuingOffice.label, '', false, options) }}
 {% endblock %}
