--- a/steps/compliance/mrn-over-month-late/template.html
+++ b/steps/compliance/mrn-over-month-late/template.html
@@ -4,8 +4,8 @@
 {% set title = content.title | safe %}
 
 {% block fields %}
-    <p class="govuk-body">{{ content.appealsShouldBeMadeWithOneMonth | safe }}</p>
-    <p class="govuk-body">{{ content.appealMayGoAheadForGoodReason | safe }}</p>
+    <p class="govuk-body">{{ content.appealsShouldBeMadeWithOneMonth }}</p>
+    <p class="govuk-body">{{ content.appealMayGoAheadForGoodReason }}</p>
 
     {% call formSection() %}
         {{ textarea(fields.reasonForBeingLate, content.fields.reasonForBeingLate.label, hideLabel = true) }}
