--- a/steps/compliance/need-irn/template.html
+++ b/steps/compliance/need-irn/template.html
@@ -4,7 +4,7 @@
 {% from "components/phase_banner.njk" import phaseBanner %}
 
 {% block pageTitle %}
-{{ content.titleHead | safe }} - {{ commonContent[htmlLang].ibca.windowTitleSuffix if isIba else commonContent[htmlLang].windowTitleSuffix | safe }}
+{{ content.titleHead }} - {{ commonContent[htmlLang].ibca.windowTitleSuffix if isIba else commonContent[htmlLang].windowTitleSuffix }}
 {% endblock %}
 
 {% block breadcrumbs %}
