--- a/steps/errors/Error404.html
+++ b/steps/errors/Error404.html
@@ -3,18 +3,18 @@
 {% from "components/header.njk" import header %}
 {% from "components/phase_banner.njk" import phaseBanner %}
 
-{% block pageTitle %}{{ title | safe }}{% endblock %}
+{% block pageTitle %}{{ title }}{% endblock %}
 
 {% block breadcrumbs %}
     {% call phaseBanner(commonContent[htmlLang], feedbackLink + urlPath) %}
-        {{ banner | safe }}
+        {{ banner }}
     {% endcall %}
 {% endblock %}
 
 {% block two_thirds %}
     {{ header(title, size='xl') }}
 
-    <p class="govuk-body">{{ message | safe }}</p>
+    <p class="govuk-body">{{ message }}</p>
 
-    <p class="govuk-body">{{ nextSteps[0] | safe }} <a class="govuk-link" href='/start-an-appeal'>{{ nextSteps[1] | safe }}</a></p>
+    <p class="govuk-body">{{ nextSteps[0] }} <a class="govuk-link" href='/start-an-appeal'>{{ nextSteps[1] }}</a></p>
 {% endblock %}
