--- a/steps/hearing/not-attending/template.html
+++ b/steps/hearing/not-attending/template.html
@@ -4,5 +4,5 @@
 {% set title = content.title | safe %}
 
 {% block fields %}
-    <p class="govuk-body">{{ content.sendInEvidence | safe }}</p>
+    <p class="govuk-body">{{ content.sendInEvidence }}</p>
 {% endblock %}
