--- a/steps/hearing/options/answer.html
+++ b/steps/hearing/options/answer.html
@@ -1,12 +1,12 @@
 {% for question, answer in cyaOptions %}
     <div class="govuk-summary-list">
         <dl class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">{{ content.cya[question] | safe }}</dt>
+            <dt class="govuk-summary-list__key">{{ content.cya[question] }}</dt>
             <dd class="govuk-summary-list__value">{{ answer }}</dd>
             <dd class="govuk-summary-list__actions">
                 {% if loop.first %}
-                    <a class="govuk-link" href="{{ path }}">{{ content.cya.change | safe }}</a>
-                    <span class="govuk-visually-hidden"> {{ content.cya.options | safe }}</span>
+                    <a class="govuk-link" href="{{ path }}">{{ content.cya.change }}</a>
+                    <span class="govuk-visually-hidden"> {{ content.cya.options }}</span>
                 {% endif %}
             </dd>
         </dl>
