--- a/steps/hearing/support/template.html
+++ b/steps/hearing/support/template.html
@@ -4,7 +4,7 @@
 {% set title = content.title | safe %}
 
 {% block fields %}
-    <p class="govuk-body">{{ content.supportCanBeArranged | safe }} <strong class="govuk-!-font-size-19 govuk-!-font-weight-bold"> {{ content.cant }}</strong> {{ content.bringYourOwn | safe }}</p>
+    <p class="govuk-body">{{ content.supportCanBeArranged }} <strong class="govuk-!-font-size-19 govuk-!-font-weight-bold"> {{ content.cant }}</strong> {{ content.bringYourOwn }}</p>
 
     {% call formSection() %}
         {{ selectionButtons(
