--- a/steps/hearing/the-hearing/template.html
+++ b/steps/hearing/the-hearing/template.html
@@ -4,9 +4,9 @@
 {% set title = content.title | safe %}
 
 {% block fields %}
-    <p class="govuk-body">{{ content.subtitle | safe }}</p>
-    <p class="govuk-body">{{ content.explainReasons | safe }}</p>
-    <p class="govuk-body">{{ content.arrangeSupport | safe }}</p>
+    <p class="govuk-body">{{ content.subtitle }}</p>
+    <p class="govuk-body">{{ content.explainReasons }}</p>
+    <p class="govuk-body">{{ content.arrangeSupport }}</p>
 
     {{ selectionButtons(
         fields.attendHearing,
