--- a/steps/identity/appellant-nino/template.html
+++ b/steps/identity/appellant-nino/template.html
@@ -5,7 +5,7 @@
 
 {% block fields %}
     {% call formSection() %}
-        <p class="govuk-body">{{ subtitle | safe }}</p>
+        <p class="govuk-body">{{ subtitle }}</p>
         {{ textbox(fields.nino, content.fields.nino.label, hideLabel=true) }}
     {% endcall %}
 {% endblock %}
