--- a/steps/reasons-for-appealing/evidence-provide/template.html
+++ b/steps/reasons-for-appealing/evidence-provide/template.html
@@ -4,9 +4,9 @@
 {% set title = content.title | safe %}
 
 {% block fields %}
-    <p class="govuk-body">{{ content.descriptionPara1 | safe }}</p>
-    <p class="govuk-body">{{ content.descriptionPara2 | safe }}</p>
-    <p class="govuk-body">{{ content.descriptionPara3 | safe }}</p>
+    <p class="govuk-body">{{ content.descriptionPara1 }}</p>
+    <p class="govuk-body">{{ content.descriptionPara2 }}</p>
+    <p class="govuk-body">{{ content.descriptionPara3 }}</p>
 
     {% call formSection() %}
         {{ selectionButtons(
