--- a/steps/reasons-for-appealing/other-reasons-for-appealing/template.html
+++ b/steps/reasons-for-appealing/other-reasons-for-appealing/template.html
@@ -6,8 +6,8 @@
 
 {% block fields %}
     {% call formSection() %}
-        <p class="govuk-body">{{ content.subtitle | safe }}</p>
-        <p class="govuk-body">{{ content.additonalInfo | safe }}</p>
+        <p class="govuk-body">{{ content.subtitle }}</p>
+        <p class="govuk-body">{{ content.additonalInfo }}</p>
 
         {{ textarea(fields.otherReasonForAppealing, content.fields.otherReasonForAppealing.label, hideLabel = true) }}
     {% endcall %}
