--- a/steps/reasons-for-appealing/sending-evidence/template.html
+++ b/steps/reasons-for-appealing/sending-evidence/template.html
@@ -4,15 +4,15 @@
 {% set title = content.title | safe %}
 
 {% block fields %}
-    <p class="govuk-body">{{ content.healthcarePro | safe }}</p>
-    <p class="govuk-body">{{ content.writeStatement | safe }}</p>
-    <p class="govuk-body">{{ content.sendEvidence | safe }}</p>
+    <p class="govuk-body">{{ content.healthcarePro }}</p>
+    <p class="govuk-body">{{ content.writeStatement }}</p>
+    <p class="govuk-body">{{ content.sendEvidence }}</p>
 
     <p class="govuk-body">
         {% if hasSignedUpForEmail %}
-            {{ content.postEvidenceWithEmail | safe }}
+            {{ content.postEvidenceWithEmail }}
         {% else %}
-            {{ content.postEvidence | safe }}
+            {{ content.postEvidence }}
         {% endif %}
     </p>
 
