--- a/steps/representative/representative-details/template.html
+++ b/steps/representative/representative-details/template.html
@@ -5,9 +5,9 @@
 {% set title = content.title | safe %}
 
 {% block fields %}
-    <p class="govuk-body">{{ content.subtitle | safe }}</p>
+    <p class="govuk-body">{{ content.subtitle }}</p>
     <div id="{{ fields.name.id }}" class="govuk-form-group {{ errorClass(fields.name) }}">
-        <legend class="govuk-visually-hidden">{{ content.title | safe }}</legend>
+        <legend class="govuk-visually-hidden">{{ content.title }}</legend>
 
         {{ errorsFor(fields.name) }}
 
