--- a/steps/sms-notify/enter-mobile/template.html
+++ b/steps/sms-notify/enter-mobile/template.html
@@ -5,7 +5,7 @@
 
 {% block fields %}
     {% call formSection() %}
-        <p class="govuk-body">{{ content.description | safe }}</p>
+        <p class="govuk-body">{{ content.description }}</p>
         {{ textbox(fields.enterMobile, content.fields.enterMobile.label, hideLabel=true) }}
     {% endcall %}
 {% endblock %}
