--- a/steps/sms-notify/sms-confirmation/template.html
+++ b/steps/sms-notify/sms-confirmation/template.html
@@ -4,10 +4,10 @@
 {% set title = content.title | safe %}
 
 {% block fields %}
-    <p class="govuk-body">{{ content.mobileNumber | safe }}
+    <p class="govuk-body">{{ content.mobileNumber }}
         <span class="govuk-!-font-size-19 govuk-!-font-weight-bold">{{ mobileNumber | default('') }}</span>
     </p>
-    <p class="govuk-body">{{ content.firstMessage | safe }}</p>
+    <p class="govuk-body">{{ content.firstMessage }}</p>
 
     {% call formSection() %}
     {% endcall %}
