--- a/steps/sms-notify/text-reminders/template.html
+++ b/steps/sms-notify/text-reminders/template.html
@@ -5,7 +5,7 @@
 
 {% block fields %}
     {% call formSection() %}
-        <p class="govuk-body">{{ content.subtitle | safe }}</p>
+        <p class="govuk-body">{{ content.subtitle }}</p>
 
         {{ selectionButtons(
             fields.doYouWantTextMsgReminders,
